feat: add internationalisation for pages

--- a/src/main/resources/languages/messages.properties
+++ b/src/main/resources/languages/messages.properties
@@ -14,6 +14,10 @@ home.username.title=Username:
 # admin page
 admin.message=A secret page for Managers
 admin.back.button.message=Back
+admin.image.alt.message=Person holding a finger to their lips in a \'shhh\' gesture, signaling quiet or silence
+# common
 language.en=English
-language.cn=中文
+language.zh=中文
+language.option.value.en=en
+language.option.value.zh=zh
 signout.button.message=Sign out
