--- a/src/main/resources/languages/messages_zh.properties
+++ b/src/main/resources/languages/messages_zh.properties
@@ -14,6 +14,10 @@ home.username.title=用户名：
 # admin page
 admin.message=管理人员的秘密页面
 admin.back.button.message=后
+admin.image.alt.message=将手指放在嘴唇上做出\“嘘\”的手势，表示安静或安静
+# common
 language.en=English
-language.cn=中文
+language.zh=中文
+language.option.value.en=en
+language.option.value.zh=zh
 signout.button.message=请示
