chore: update login failed message

--- a/src/main/resources/languages/messages.properties
+++ b/src/main/resources/languages/messages.properties
@@ -4,7 +4,7 @@ login.username.title=Username
 login.password.title=Password
 login.invalid.username.message=Please enter a username.
 login.invalid.password.message=Please enter a password.
-login.invalid.user.message=User not found
+login.invalid.user.message=Invalid userid or password
 login.signin.button.message=Sign In
 # index page
 home.ismanager.link.text=Manager Page
