--- a/src/main/resources/languages/messages_zh.properties
+++ b/src/main/resources/languages/messages_zh.properties
@@ -4,7 +4,7 @@ login.username.title=用户名
 login.password.title=密码
 login.invalid.username.message=请输入用户名。
 login.invalid.password.message=请输入密码。
-login.invalid.user.message=未找到用户
+login.invalid.user.message=无效的用户名或密码
 login.signin.button.message=登录
 # index page
 home.ismanager.link.text=经理页面
